fix(frontend): increase side nav z-index

--- a/packages/frontend/src/components/layout/side-nav/styles.module.css
+++ b/packages/frontend/src/components/layout/side-nav/styles.module.css
@@ -1,7 +1,7 @@
 @reference "../../../app.css";
 
 .root {
-    @apply h-full w-[76px] z-10 hidden fixed sm:flex flex-col self-start border-r border-zinc-300 dark:border-zinc-800;
+    @apply h-full w-[76px] z-20 hidden fixed sm:flex flex-col self-start border-r border-zinc-300 dark:border-zinc-800;
 }
 
 .logoWrapper {
